package com.rolex.microlabs.structural.proxy.cglib;

/**
 * @author rolex
 * @since 2020
 */
public interface Advice {

    void before();

    void after();

}
