@startuml

class App {
    + main(args : String[]) {static} : void
}

interface Advice {
    + before() : void
    + after() : void
}

class GIFImage {
    imageFilePath : String
    + display() : void
}

class ImageProxy {
    - target : GIFImage
    + getProxyInstance() : Object
    + intercept(o : Object, method : Method, args : Object[], methodProxy : MethodProxy) : Object
}

interface MethodInterceptor {
    + intercept(o : Object, method : Method, args : Object[], methodProxy : MethodProxy) : Object
}

interface Callback

ImageProxy ..|> MethodInterceptor
ImageProxy o-- GIFImage
MethodInterceptor --|> Callback
ImageProxy ..|> Advice

@enduml